Fixes top alignment for Configure what this tag should do section, #PG-3646

--- a/vue/src/VariableSelectType/VariableSelectType.less
+++ b/vue/src/VariableSelectType/VariableSelectType.less
@@ -5,6 +5,7 @@
 
   .selectVariableType {
     margin-left: -0.75rem;
+    margin-top: -1.3rem;
 
     .form-group.row {
       margin-bottom: 0
